use FP where it makes sense